[profile.release]
panic = 'unwind'

[package]
authors = ['liuhb']
build = 'build.rs'
edition = '2018'
name = 'substrate-demo'
version = '2.0.0'

[build-dependencies]
vergen = '3.0.4'

[build-dependencies.build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-build-script-utils'
rev = 'c3af86cee45d98dd5f97fb2de419ba4e25ac14b7'

[dependencies]
futures = '0.3.1'
log = '0.4.8'
parking_lot = '0.10.0'
tokio = '0.2.9'
trie-root = '0.15.2'

[dependencies.codec]
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.ctrlc]
features = ['termination']
version = '3.1.3'

[dependencies.futures01]
package = 'futures'
version = '0.1.29'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'sc-finality-grandpa'
rev = 'c3af86cee45d98dd5f97fb2de419ba4e25ac14b7'

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-finality-grandpa'
rev = 'c3af86cee45d98dd5f97fb2de419ba4e25ac14b7'

[dependencies.substrate-demo-runtime]
path = 'runtime'
version = '2.0.0'

[dependencies.sc-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = 'c3af86cee45d98dd5f97fb2de419ba4e25ac14b7'

[dependencies.sc-client]
git = 'https://github.com/paritytech/substrate.git'
rev = 'c3af86cee45d98dd5f97fb2de419ba4e25ac14b7'

[dependencies.sc-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
rev = 'c3af86cee45d98dd5f97fb2de419ba4e25ac14b7'

[dependencies.sc-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = 'c3af86cee45d98dd5f97fb2de419ba4e25ac14b7'

[dependencies.sc-network]
git = 'https://github.com/paritytech/substrate.git'
rev = 'c3af86cee45d98dd5f97fb2de419ba4e25ac14b7'

[dependencies.sc-service]
git = 'https://github.com/paritytech/substrate.git'
rev = 'c3af86cee45d98dd5f97fb2de419ba4e25ac14b7'

[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
rev = 'c3af86cee45d98dd5f97fb2de419ba4e25ac14b7'

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'
rev = 'c3af86cee45d98dd5f97fb2de419ba4e25ac14b7'

[dependencies.sp-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
rev = 'c3af86cee45d98dd5f97fb2de419ba4e25ac14b7'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
rev = 'c3af86cee45d98dd5f97fb2de419ba4e25ac14b7'

[dependencies.sp-inherents]
git = 'https://github.com/paritytech/substrate.git'
rev = 'c3af86cee45d98dd5f97fb2de419ba4e25ac14b7'

[dependencies.sp-io]
git = 'https://github.com/paritytech/substrate.git'
rev = 'c3af86cee45d98dd5f97fb2de419ba4e25ac14b7'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
rev = 'c3af86cee45d98dd5f97fb2de419ba4e25ac14b7'

[dependencies.sp-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
rev = 'c3af86cee45d98dd5f97fb2de419ba4e25ac14b7'

[workspace]
members = ['runtime']

[[bin]]
name = 'substrate-demo'
path = 'src/main.rs'
